tests/sumo/errors/invalid_color/errors.sumo
Error: Invalid color definition '1 2 3 4 5'
Quitting (on error).
